replace 'text-slate-700 dark:text-slate-400' classes with 'text-soft' class

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
   <h1 class="heading">Account</h1>
-  <p class="text-slate-700 dark:text-slate-400">Edit your account details.</p>
+  <p class="text-soft">Edit your account details.</p>
 </div>
 
 <div class="my-6">
