--- a/app/views/users/_runs_list.html.erb
+++ b/app/views/users/_runs_list.html.erb
@@ -6,7 +6,7 @@
     <%= render @runs %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No runs found for the selected date range.</p>
+      <p class="prose dark:prose-invert text-soft">No runs found for the selected date range.</p>
     </div>
   <% end %>
 </div>
