--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,7 +2,7 @@
   <div class="mb-24">
     <div class="mt-10 pb-6 space-y-2">
       <h1 class="heading">Search</h1>
-      <p class="text-slate-700 dark:text-slate-400">Find new teams or members you are connected with.</p>
+      <p class="text-soft">Find new teams or members you are connected with.</p>
     </div>
 
     <div class="border-b border-slate-200 dark:border-slate-700">
@@ -18,7 +18,7 @@
 
     <%= turbo_frame_tag 'searchResults' do %>
       <div class="flex flex-col gap-6 items-center justify-center py-12">
-        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400 text-center">Start typing to find teams or other members.</p>
+        <p class="prose dark:prose-invert text-soft text-center">Start typing to find teams or other members.</p>
       </div>
     <% end %>
   </div>
