--- a/app/views/search/index.turbo_stream.erb
+++ b/app/views/search/index.turbo_stream.erb
@@ -7,7 +7,7 @@
       </div>
     <% else %>
       <div class="flex flex-col gap-6 items-center justify-center py-12">
-        <%= content_tag(:p, @query.present? ? 'No results found.' : 'Start typing to find teams or other members.', class: 'prose dark:prose-invert text-slate-700 dark:text-slate-400 text-center') %>
+        <%= content_tag(:p, @query.present? ? 'No results found.' : 'Start typing to find teams or other members.', class: 'prose dark:prose-invert text-soft text-center') %>
       </div>
     <% end %>
   <% end %>
