--- a/app/views/teams/_edit_settings.html.erb
+++ b/app/views/teams/_edit_settings.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
   <h1 class="heading">Team Settings</h1>
-  <p class="text-slate-700 dark:text-slate-400">Set preferences for your team to match your needs.</p>
+  <p class="text-soft">Set preferences for your team to match your needs.</p>
 </div>
 
 <%= form_with model: @team, url: team_settings_path(@team), local: true, data: { controller: 'restore-defaults team-gender-fields' } do |form| %>
