--- a/app/views/teams/_edit_team.html.erb
+++ b/app/views/teams/_edit_team.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
   <h1 class="heading">Edit Team</h1>
-  <p class="text-slate-700 dark:text-slate-400">Edit your team's details.</p>
+  <p class="text-soft">Edit your team's details.</p>
 </div>
 
 <%= render "form", team: @team %>
