--- a/app/views/teams/_featured.html.erb
+++ b/app/views/teams/_featured.html.erb
@@ -1,16 +1,16 @@
 <div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
   <h1 class="heading">Featured</h1>
-  <p class="text-slate-700 dark:text-slate-400">Recent long runs by members of this team.</p>
+  <p class="text-soft">Recent long runs by members of this team.</p>
 </div>
 
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
   <% if team.recent_long_runs.any? %>
     <% team.recent_long_runs.each do |run| %>
-        <%= render run, team: team %>
+      <%= render run, team: team %>
     <% end %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No featured activity to show.</p>
+      <p class="prose dark:prose-invert text-soft">No featured activity to show.</p>
     </div>
   <% end %>
 </div>
