--- a/app/views/teams/_join_requests.html.erb
+++ b/app/views/teams/_join_requests.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
   <h1 class="heading">Join Requests</h1>
-  <p class="text-slate-700 dark:text-slate-400"><%= join_requests.count < 1 ? 'No requests' : pluralize(join_requests.count, 'request') %></p>
+  <p class="text-soft"><%= join_requests.count < 1 ? 'No requests' : pluralize(join_requests.count, 'request') %></p>
 </div>
 
 <% if join_requests.any? %>
@@ -11,6 +11,6 @@
   </div>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
-    <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No new join requests.</p>
+    <p class="prose dark:prose-invert text-soft">No new join requests.</p>
   </div>
 <% end %>
