--- a/app/views/teams/_membered_teams.html.erb
+++ b/app/views/teams/_membered_teams.html.erb
@@ -6,7 +6,7 @@
   <%= render 'team_list', teams: membered_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
-    <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You're not a member of any teams yet.</p>
+    <p class="prose dark:prose-invert text-soft">You're not a member of any teams yet.</p>
     <%= link_to 'Find a team', teams_path(tab: 'otherTeamsTab'), class: 'btn btn-white' %>
   </div>
 <% end %>
