--- a/app/views/teams/_members.html.erb
+++ b/app/views/teams/_members.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 pb-6 space-y-2">
   <h1 class="heading">Team Members</h1>
-  <p class="text-slate-700 dark:text-slate-400">Find team members by name.</p>
+  <p class="text-soft">Find team members by name.</p>
 </div>
 
 <div class="border-b border-slate-200 dark:border-slate-700">
@@ -20,7 +20,7 @@
       <%= render 'member_list', members: members %>
     <% else %>
       <div class="flex flex-col gap-6 items-center justify-center py-12">
-        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No team members found.</p>
+        <p class="prose dark:prose-invert text-soft">No team members found.</p>
       </div>
     <% end %>
   </div>
