--- a/app/views/teams/_other_teams.html.erb
+++ b/app/views/teams/_other_teams.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 pb-6 space-y-2">
   <h1 class="heading">Find Teams</h1>
-  <p class="text-slate-700 dark:text-slate-400">Find teams by team name or coach name.</p>
+  <p class="text-soft">Find teams by team name or coach name.</p>
 </div>
 
 <div class="border-b border-slate-200 dark:border-slate-700">
@@ -19,7 +19,7 @@
     <%= render 'team_list', teams: other_teams, show_members: true %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No teams found.</p>
+      <p class="prose dark:prose-invert text-soft">No teams found.</p>
     </div>
   <% end %>
 <% end %>
