--- a/app/views/teams/_rankings.html.erb
+++ b/app/views/teams/_rankings.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 pb-6 space-y-2">
   <h1 class="heading">Team Rankings</h1>
-  <p class="text-slate-700 dark:text-slate-400"><%= current_user.owns?(@team) ? "View your team's rankings to see how your athletes stack up against each other." : 'View the rankings for this team to see how you stack up against the other members.' %></p>
+  <p class="text-soft"><%= current_user.owns?(@team) ? "View your team's rankings to see how your athletes stack up against each other." : 'View the rankings for this team to see how you stack up against the other members.' %></p>
 </div>
 
 <div class="relative overflow-x-auto shadow-md dark:shadow-none rounded-lg border border-slate-200 dark:border-slate-700">
