--- a/app/views/teams/index.turbo_stream.erb
+++ b/app/views/teams/index.turbo_stream.erb
@@ -3,7 +3,7 @@
     <%= render 'team_list', teams: @other_teams %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No teams found.</p>
+      <p class="prose dark:prose-invert text-soft">No teams found.</p>
     </div>
   <% end %>
 <% end %>
