--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -1,7 +1,7 @@
 <div class="mb-24">
   <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
     <h1 id="runs_title" class="heading">Filter Runs</h1>
-    <p class="text-slate-700 dark:text-slate-400">Filter <%= user == current_user ? 'your runs' : 'runs for this user' %> by date.</p>
+    <p class="text-soft">Filter <%= user == current_user ? 'your runs' : 'runs for this user' %> by date.</p>
   </div>
 
   <%= form_with url: user_path(user), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'runs', controller: 'custom-date-range form-validation' } do %>
@@ -32,7 +32,7 @@
       <%= render @runs %>
     <% else %>
       <div class="flex flex-col gap-6 items-center justify-center py-12">
-        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No runs found for the selected date range.</p>
+        <p class="prose dark:prose-invert text-soft">No runs found for the selected date range.</p>
       </div>
     <% end %>
   </div>
