--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b border-slate-200 dark:border-slate-700">
   <div class="space-y-2">
     <h1 class="heading">Runs Today</h1>
-    <p class="text-slate-700 dark:text-slate-400">Runs <%= user == current_user ? 'you have' : 'this user has' %> gone on today.</p>
+    <p class="text-soft">Runs <%= user == current_user ? 'you have' : 'this user has' %> gone on today.</p>
   </div>
 
   <% if user == current_user && user.runs_today.any? %>
@@ -17,10 +17,10 @@
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
       <% if user == current_user %>
-        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You haven't gone on any runs yet today.</p>
+        <p class="prose dark:prose-invert text-soft">You haven't gone on any runs yet today.</p>
         <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
       <% else %>
-        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= user.default_name %> hasn't gone on any runs yet today.</p>
+        <p class="prose dark:prose-invert text-soft"><%= user.default_name %> hasn't gone on any runs yet today.</p>
       <% end %>
     </div>
   <% end %>
