--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b border-slate-200 dark:border-slate-700">
   <div class="space-y-2">
     <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.default_name}'s" %> Teams</h1>
-    <p class="text-slate-700 dark:text-slate-400">Teams <%= user == current_user ? 'you are' : 'this user is' %> the coach of.</p>
+    <p class="text-soft">Teams <%= user == current_user ? 'you are' : 'this user is' %> the coach of.</p>
   </div>
 
   <% if user == current_user && owned_teams.any? %>
@@ -14,24 +14,24 @@
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
     <% if user == current_user %>
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You don't have any teams yet.</p>
+      <p class="prose dark:prose-invert text-soft">You don't have any teams yet.</p>
       <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
     <% else %>
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= user.default_name %> doesn't have any teams yet.</p>
+      <p class="prose dark:prose-invert text-soft"><%= user.default_name %> doesn't have any teams yet.</p>
     <% end %>
   </div>
 <% end %>
 
 <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
   <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.default_name}'s" %> Team Memberships</h1>
-  <p class="text-slate-700 dark:text-slate-400">Teams <%= user == current_user ? 'you are' : 'this user is' %> a member of.</p>
+  <p class="text-soft">Teams <%= user == current_user ? 'you are' : 'this user is' %> a member of.</p>
 </div>
 
 <% if membered_teams.any? %>
   <%= render 'teams/team_list', teams: membered_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
-    <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You're not a member of any teams yet.</p>
+    <p class="prose dark:prose-invert text-soft">You're not a member of any teams yet.</p>
     <%= link_to 'Find a team', teams_path, class: 'btn btn-white' %>
   </div>
 <% end %>
