sort _rankings table by columns

--- a/app/views/teams/_rankings.html.erb
+++ b/app/views/teams/_rankings.html.erb
@@ -3,62 +3,48 @@
   <p class="text-soft"><%= current_user.owns?(@team) ? "View your team's rankings to see how your athletes stack up against each other." : 'View the rankings for this team to see how you stack up against the other members.' %></p>
 </div>
 
-<div class="relative overflow-x-auto shadow-md dark:shadow-none rounded-lg border border-slate-200 dark:border-slate-700">
-  <table class="w-full table-auto overflow-x-auto text-sm text-left rtl:text-right text-soft row-numbers">
+<div data-controller="sort-table" class="relative overflow-x-auto shadow-md dark:shadow-none rounded-lg border border-slate-200 dark:border-slate-700">
+  <table data-sort-table-target="table" class="w-full table-auto overflow-x-auto text-sm text-left rtl:text-right text-soft row-numbers">
     <thead class="text-xs uppercase text-slate-800 dark:text-slate-100 bg-slate-200/70 dark:bg-slate-700/70">
       <tr>
-        <th scope="col" class="px-6 py-3 whitespace-nowrap">
+        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" class="px-6 py-3 whitespace-nowrap hover:cursor-pointer select-none">
           <div class="flex items-center">
             Team member
-            <!-- Sort icon -->
+            <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-4 ml-1 transition ease-in-out duration-200 hidden' %>
           </div>
         </th>
         <% if @team.require_gender? %>
-          <th scope="col" class="px-6 py-3 whitespace-nowrap">
+          <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" class="px-6 py-3 whitespace-nowrap hover:cursor-pointer select-none">
             <div class="flex items-center">
               Gender
-              <!-- Sort icon -->
+              <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-4 ml-1 transition ease-in-out duration-200 hidden' %>
             </div>
           </th>
         <% end %>
-        <% if @team.season_dates? %>
-          <th scope="col" class="px-6 py-3 whitespace-nowrap">
-            <div class="flex items-center">
-              # of miles this season
-              <!-- Sort icon -->
-            </div>
-          </th>
-          <th scope="col" class="px-6 py-3 whitespace-nowrap">
-            <div class="flex items-center">
-              # of long runs this season
-              <!-- Sort icon -->
-            </div>
-          </th>
-        <% end %>
-        <th scope="col" class="px-6 py-3 whitespace-nowrap">
+        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th defaultSort" data-numeric="true" class="px-6 py-3 whitespace-nowrap hover:cursor-pointer select-none">
           <div class="flex items-center">
-            # of miles total
-            <!-- Sort icon -->
+            miles <%= @team.season_dates? ? 'this season' : 'total' %>
+            <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-4 ml-1 transition ease-in-out duration-200 rotate-180' %>
           </div>
         </th>
-        <th scope="col" class="px-6 py-3 whitespace-nowrap">
+        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" data-numeric="true" class="px-6 py-3 whitespace-nowrap hover:cursor-pointer select-none">
           <div class="flex items-center">
-            # of long runs total
-            <!-- Sort icon -->
+            long runs <%= @team.season_dates? ? 'this season' : 'total' %>
+            <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-4 ml-1 transition ease-in-out duration-200 hidden' %>
           </div>
         </th>
       </tr>
     </thead>
 
     <tbody class="divide-y divide-slate-200 dark:divide-slate-700">
-      <% @team.members.sort_by { |member| -member.miles_this_season(@team) }.each do |member| %>
+      <% @team.members.sort_by { |member| -(@team.require_gender? ? member.miles_this_season(@team) : member.total_miles) }.each do |member| %>
         <tr class="bg-slate-50/85 dark:bg-slate-800/85 hover:bg-slate-200/70 dark:hover:bg-slate-700/70">
           <th scope="row" class="px-6 py-4 font-medium text-slate-800 dark:text-slate-100 whitespace-nowrap">
             <div class="flex items-center">
               <div class="row-number font-mono mr-4 -ml-1"></div>
               <div>
-                <%= content_tag(:p, member == current_user ? 'You' : 'Coach', class: 'help-text') if member.owns?(@team) || member == current_user %>
                 <%= link_to member.default_name, member, data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
+                <%= content_tag(:p, member == current_user ? 'You' : 'Coach', class: 'help-text') if member.owns?(@team) || member == current_user %>
               </div>
             </div>
           </th>
@@ -67,19 +53,11 @@
               <%= member.gender.present? ? member.gender.capitalize : '—' %>
             </td>
           <% end %>
-          <% if @team.season_dates? %>
-            <td class="px-6 py-4 font-mono">
-              <%= member.miles_this_season(@team) %>
-            </td>
-            <td class="px-6 py-4 font-mono">
-              <%= member.total_long_runs_this_season(@team) %>
-            </td>
-          <% end %>
           <td class="px-6 py-4 font-mono">
-            <%= member.total_miles %>
+            <%= @team.season_dates? ? member.miles_this_season(@team) : member.total_miles %>
           </td>
           <td class="px-6 py-4 font-mono">
-            <%= member.total_long_runs(@team) %>
+            <%= @team.season_dates? ? member.total_long_runs_this_season(@team) : member.total_long_runs(@team) %>
           </td>
         </tr>
       <% end %>
@@ -88,13 +66,11 @@
     <tfoot>
       <tr class="text-sm font-semibold text-slate-800 dark:text-slate-100 bg-slate-200/70 dark:bg-slate-700/70">
         <th scope="row" class="px-6 py-3">Total</th>
-        <td class="px-6 py-3"></td>
-        <% if @team.season_dates? %>
-          <td class="px-6 py-3 font-mono"><%= @team.total_miles_in_season %> <span class="text-xs">mi</span></td>
-          <td class="px-6 py-3 font-mono"><%= @team.total_long_runs_in_season %> <span class="text-xs">long runs</span></td>
+        <% if @team.require_gender? %>
+          <td class="px-6 py-3"></td>
         <% end %>
-        <td class="px-6 py-3 font-mono"><%= @team.total_miles %> <span class="text-xs">mi</span></td>
-        <td class="px-6 py-3 font-mono"><%= @team.total_long_runs %> <span class="text-xs">long runs</span></td>
+        <td class="px-6 py-3 font-mono"><%= @team.season_dates? ? @team.total_miles_in_season : @team.total_miles %> <span class="text-xs">mi</span></td>
+        <td class="px-6 py-3 font-mono"><%= @team.season_dates? ? @team.total_long_runs_in_season : @team.total_long_runs %> <span class="text-xs">long runs</span></td>
       </tr>
     </tfoot>
   </table>
