--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -6,13 +6,13 @@
 
   <div class="block sm:flex space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
     <div class='flex flex-col items-center justify-center text-center'>
-      <p class='font-semibold text-2xl'>
+      <p class='font-semibold font-mono text-2xl'>
         <%= user.total_miles %>
       </p>
       <p class='text-soft'>miles ran</p>
     </div>
     <div class='flex flex-col items-center justify-center text-center'>
-      <p class='font-semibold text-2xl'>
+      <p class='font-semibold font-mono text-2xl'>
         <%= precise_time_ago(user.total_duration, format: :short) %>
       </p>
       <p class='text-soft'>spent running</p>
