--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -29,26 +29,29 @@
 
     <div class="block sm:flex space-y-10 sm:space-y-0 sm:items-center sm:justify-around mb-8">
       <% if user.show_email? %>
-        <div class="space-y-1 text-center">
+        <div class="space-y-2 text-center">
           <p><%= user.email %></p>
           <div class="flex items-center justify-center gap-3">
-            <%= mail_to user.email, class: 'btn btn-sm btn-white' do %>
+            <%= mail_to user.email, class: 'btn btn-sm btn-white flex items-center gap-2' do %>
               <%= inline_svg_tag 'icons/envelope.svg', class: 'size-4' %>
+              <span>Email</span>
             <% end %>
           </div>
         </div>
       <% end %>
 
       <% if user.show_phone? && user.phone_number? %>
-        <div class="space-y-1 text-center">
+        <div class="space-y-2 text-center">
           <p><%= number_to_phone(user.phone_number, area_code: true) %></p>
           <div class="flex items-center justify-center gap-3">
-            <%= sms_to user.phone_number, class: 'btn btn-sm btn-white' do %>
+            <%= sms_to user.phone_number, class: 'btn btn-sm btn-white flex items-center gap-2' do %>
               <%= inline_svg_tag 'icons/message-bubble.svg', class: 'size-4' %>
+              <span>Message</span>
             <% end %>
 
-            <%= phone_to user.phone_number, class: 'btn btn-sm btn-white' do %>
+            <%= phone_to user.phone_number, class: 'btn btn-sm btn-white flex items-center gap-2' do %>
               <%= inline_svg_tag 'icons/phone.svg', class: 'size-4' %>
+              <span>Call</span>
             <% end %>
           </div>
         </div>
