--- a/app/views/teams/_team_buttons.html.erb
+++ b/app/views/teams/_team_buttons.html.erb
@@ -12,7 +12,7 @@
       <p class="error-message text-base w-full text-center">You must specify your gender to join this team.</p>
     <% end %>
   <% elsif request.pending? %>
-    <%= button_to 'Cancel request', cancel_request_path(request), method: :patch, class: "btn btn-destructive btn-outline #{current_page?(team_path(team)) ? '' : 'btn-sm'}", data: { turbo: false } %>
+    <%= button_to 'Cancel request', cancel_team_join_request_path(request), method: :patch, class: "btn btn-destructive btn-outline #{current_page?(team_path(team)) ? '' : 'btn-sm'}", data: { turbo: false } %>
   <% elsif current_page?(team_path(team)) %>
     <p class="error-message text-base">You have been blocked from this team.</p>
   <% end %>
