--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -12,13 +12,13 @@
 
     <div class="form-group hidden" data-custom-date-range-target="startDate">
       <%= label_tag :run_start_date, 'Start date', class: 'form-label' %>
-      <%= date_field_tag :run_start_date, nil, max: Date.yesterday, class: 'form-input', data: { form_validation_target: 'runStartDate', custom_date_range_target: 'startDateField', action: 'input->form-validation#validateRunEndDate custom-date-range#search' } %>
+      <%= date_field_tag :run_start_date, nil, max: Date.yesterday, class: 'form-input', data: { form_validation_target: 'startDate', custom_date_range_target: 'startDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
     </div>
 
     <div class="form-group hidden" data-custom-date-range-target="endDate">
       <%= label_tag :run_end_date, 'End date', class: 'form-label' %>
-      <%= date_field_tag :run_end_date, nil, max: Date.today, class: 'form-input', data: { form_validation_target: 'runEndDate', custom_date_range_target: 'endDateField', action: 'input->form-validation#validateRunEndDate custom-date-range#search' } %>
-      <span class="error-message hidden my-1" data-form-validation-target="runEndDateError">End date must be today or earlier and must be after start date</span>
+      <%= date_field_tag :run_end_date, nil, max: Date.today, class: 'form-input', data: { form_validation_target: 'endDate', custom_date_range_target: 'endDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
+      <span class="error-message hidden my-1" data-form-validation-target="endDateError">End date must be today or earlier and must be after start date</span>
     </div>
   <% end %>
 </div>
